# rhasspy

./: .dockerignore  .gitignore  .gitmodules  .projectile  AppImageBuilder.yml  CHANGELOG  Dockerfile  Dockerfile.appimage  Dockerfile.debian  Dockerfile.nobuildx  Dockerfile.pulseaudio  Dockerfile.pyinstaller.alsa  Dockerfile.source.alsa  Dockerfile.source.alsa.aarch64  Dockerfile.source.alsa.alpine  Dockerfile.source.alsa.pizero  LICENSE  Makefile  Makefile.in  Makefile.service.template  README.md  RHASSPY_DIRS  RHASSPY_LIBRARIES  RHASSPY_SERVICES  TODO.md  VERSION  __main__.py  aclocal.m4  architecture.sh  bootstrap.sh  build-with-docker.sh  configure  configure.ac  get-rhasspy.sh  mkdocs.yml  mypy.ini  pylintrc  requirements.txt  requirements_dev.txt  rhasspy.sh.in  (+8 more)
.github/workflows/: deploy.yml  tests.yml
debian/: control.in  fix-rhasspy-scripts.sh  rhasspy  sox
debian/DEBIAN/: control
debian/DEBIAN_satellite/: control
docker/: preprocess.sh  pulseaudio.client.conf  rhasspy-voltron  rhasspy-voltron-pulseaudio
docs/: about.md  audio-input.md  audio-output.md  command-listener.md  contributing.md  development.md  hardware.md  index.md  installation.md  intent-handling.md  intent-recognition.md  license.md  master-plan.md  profiles.md  reference.md  requirements.txt  services.md  speech-to-text.md  text-to-speech.md  training.md  tutorials.md  usage.md  wake-word.md  whitepaper.md  why-rhasspy.md
docs/img/getting-started/: handle.png~  sounds.png~  wake.png~
etc/: downloads.md5  shflags
examples/: simple-skill.py
examples/docker-compose-pulseaudio/: 99-pulseaudio-default.conf  README.md  docker-compose.yml  rhasspy.service
examples/homeassistant/: README.md  docker-compose.yml
examples/homeassistant/config/: configuration.yaml  secrets.yaml
examples/homeassistant/profile/: sentences.ini
examples/homeassistant/profile/slot_programs/hass/: entities
examples/homeassistant/profile/slots/hass/: colors
m4/: python.m4
rhasspy/: __main__.py
rhasspy-test/: requirements.txt
rhasspy-test/profiles/en/shared/: sentences.ini
rhasspy-test/profiles/en/test_kaldi/: profile.json
rhasspy-test/profiles/en/test_pocketsphinx/: profile.json
rhasspy-test/scripts/: run-tests-for.sh
rhasspy-test/tests/en/: test_asr.py  test_nlu.py
scripts/: build-appimage.sh  build-debian-satellite.sh  build-debian.sh  build-dists.sh  build-docker.sh  build-docs.sh  build-pyinstaller.sh  build-sdists.sh  build-services.sh  build-with-docker.sh  check-code.sh  create-sdist.sh  create-venv.sh  download-dependencies.sh  download-deps.sh  ensure-checkout.sh  format-code.sh  get-requirements.sh  install-deepspeech.sh  install-kaldi.sh  install-kenlm.sh  install-mitlm.sh  install-opengrm.sh  install-phonetisaurus.sh  install-precise.sh  print-rhasspy-dependencies.py  run-tests.sh  update-makefiles.sh  update-venvs.sh  verify-downloads.sh
scripts/install/: install-deepspeech.sh  install-julius.sh  install-kaldi.sh  install-kenlm.sh  install-nanotts.sh  install-opengrm.sh  install-phonetisaurus.sh  install-precise.sh
